--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "welcomeconfig",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
     "start": "electron .",
-    "build:rasp": "electron-packager ./ welcomeconfig --overwrite --platform=linux --arch=armv7l --icon=./static/images/Logo.ico --out=./release --asar.u    npack='**/config/config.js' --app-version=0.0.1 --no-tmpdir=false --download.mirrorOptions.mirror=http://npm.taobao.org/mirrors/electron/ --unsafe-perm=true"
+    "build:mac": "electron-packager . welcomeconfig --overwrite --platform=darwin --arch=x64 --icon=./static/images/Logo.ico --out=release --ignore=www --asar.unpack {config.json,**/*.png} --app-version=0.0.1 ",
+    "build:rasp": "electron-packager . welcomeconfig --overwrite --platform=linux --arch=armv7l --icon=./static/images/Logo.ico --out=release --asar.unpack config.json --app-version=0.0.1 --ignore=www --no-tmpdir=false --download.mirrorOptions.mirror=http://npm.taobao.org/mirrors/electron/ --unsafe-perm=true"
   },
   "devDependencies": {
     "electron": "2.0.7",
     "electron-packager": "12.2.0"
-  }
+  },
+  "dependencies": {}
 }
